field_size_macro/tests/failing/non_enum.rs
#[macro_use]
extern crate field_size_macro;

#[derive(FieldSize)]
struct Test;
