field_size_macro/tests/failing/non_enum.stderr
error: proc-macro derive panicked
 --> $DIR/non_enum.rs:4:10
  |
4 | #[derive(FieldSize)]
  |          ^^^^^^^^^
  |
  = help: message: FieldSize only works on Enums
